# agl-persistent-storage-api

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
proto/: storage_api.proto
src/: facade.rs  main.rs  server.rs  service.rs  storage_api.rs
testpath/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1715179734176965  LOG.old.1715182325032967  LOG.old.1715182418718396  LOG.old.1715598633378746  LOG.old.1715775184560051  LOG.old.1715775223052529  LOG.old.1715775240827526  MANIFEST-000014  MANIFEST-000015  OPTIONS-000016
tests/: integration_tests.rs
